--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ body{
 header, footer{
     padding: 2rem 1rem;
     background-color: var(--white);
-    width: 100%;
+    width: calc(100% - 2rem);
     max-width: 1200px;
     box-shadow: var(--box-shadow-sm);
 }
@@ -456,7 +456,7 @@ input:focus{
     select the labels in the form using the tag name/element selector
 */
 /* ----- */
-{
+label{
     font-size: 1.25rem;
     margin-top: 16px;
 }
@@ -467,7 +467,7 @@ input:focus{
     select the spans in the form using the class name selector
 */
 /* ----- */
-{
+.required{
     font-size: 1.5rem;
     font-weight: bold;
     display: inline;
@@ -480,7 +480,7 @@ input:focus{
     select all of the submit buttons (by tag name/type attribute) on the page
 */
 /* ----- */
-{
+input[type="submit"]{
     display: block;
     margin: 32px auto 16px;
     width: 100%;
@@ -503,7 +503,7 @@ input:focus{
     select all of the submit buttons on hover (by tag name/type attribute name) on the page
 */
 /* ----- */
-{
+input[type="submit"]:hover{
     box-shadow: var(--box-shadow-sm);
     color: var(--purple);
     background-color: var(--lt-gray);
@@ -515,7 +515,7 @@ input:focus{
     select all of the submit buttons on focus (by tag name/type attribute/pseudo-class) on the page
 */
 /* ----- */
-{
+input[type="submit"]:focus{
     box-shadow: var(--box-shadow-sm);
     outline: 4px solid var(--dv-dk-blue);
     outline-offset: 1px;
@@ -530,7 +530,7 @@ input:focus{
     select the h2 in the list styling section using the class name selector
 */
 /* ----- */
-{
+.blue-text{
     color: var(--blue);
 }
 
@@ -540,7 +540,7 @@ input:focus{
     select the unordered list in the list styling container using the id and tag name selectors
 */
 /* ----- */
-{
+#list ul{
     display: block;
     width: fit-content;
     margin: 32px auto;
@@ -552,7 +552,7 @@ input:focus{
     select all of the list items in the list styling container using the ID and tag name selectors
 */
 /* ----- */
-{
+#list li{
     font-size: 1.25rem;
     line-height: 1.35;
     margin-bottom: 8px;
@@ -565,7 +565,8 @@ input:focus{
     select the bullets on the unordered list in the list styling section using the tag name and pseudo-class selectors
 */
 /* ----- */
-{
+
+#list li::marker{
     font-size: 3rem;
     content: "\2730";
 }
@@ -576,7 +577,7 @@ input:focus{
     select the first list item in the list styling container using the ID, tag name, and pseudo-class selectors
 */
 /* ----- */
-{
+#list li:first-of-type{
     color: var(--purple);
 }
 
@@ -586,7 +587,7 @@ input:focus{
     select the last list item in the list styling container using the ID, tag name, and pseudo-class selectors
 */
 /* ----- */
-{
+#list li:last-of-type{
     color: var(--dv-lt-blue);
 }
 
@@ -599,7 +600,7 @@ input:focus{
     select all of the divs in the more styling section using the ID, descendant, and tag name selectors
 */
 /* ----- */
-{
+#more div{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -611,7 +612,7 @@ input:focus{
     select the first div in the more styling section using the ID, tag name and direct descendant selectors
   */
   /* ----- */
-{
+#more > div{
     width: 300px;
     height: 300px;
     background-color: var(--dv-red);
@@ -624,7 +625,7 @@ input:focus{
     select the second div in the more styling section using the ID, descendant, and tag name selectors
 */
 /* ----- */
-{
+#more div div{
     width: 250px;
     height: 250px;
     background-color: var(--dv-orange);
@@ -636,7 +637,7 @@ input:focus{
     select the third div in the more styling section using the ID, descendant, and class name selectors
 */
 /* ----- */
-{
+#more .third{
     width: 200px;
     height: 200px;
     background-color: var(--dv-yellow);
@@ -648,7 +649,7 @@ input:focus{
     select the fourth div in the pseudo-class styling section using the ID, tag name, descendant, and class selectors
 */
 /* ----- */
-{
+#more .third div{
     width: 150px;
     height: 150px;
     background-color: var(--dv-mint);
@@ -660,7 +661,7 @@ input:focus{
     select the last div in the more styling section using the ID, tag name, descendant, and class selectors
 */
 /* ----- */
-{
+#more div.inner{
     width: 100px;
     height: 100px;
     background-color: var(--dv-lt-blue);
@@ -675,11 +676,17 @@ input:focus{
     select the section with the ID of software by its ID 
 */
 /* ----- */
-{
+#software{
     margin-top: 16px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 12px;
+}
+
+#software h3{
+    grid-column: 1/-1;
+    text-align: center;
+
 }
 
 /* ----- */
@@ -688,7 +695,7 @@ input:focus{
     select the links in the software section using the ID, tag name, and child/descendant selector
 */
 /* ----- */
-{
+#software a{
     width: 100px;
     height: auto;
     margin: 0 auto;
@@ -703,7 +710,7 @@ input:focus{
     select the links in the software section on hover using the ID, tag name, child/descendant selector, and pseudo-class selector
 */
 /* ----- */
-{
+#software a:hover{
     background-color: var(--dk-gray);
     box-shadow: var(--box-shadow-sm);
 }
@@ -714,7 +721,7 @@ input:focus{
     select the SVGs in the software section using the ID, tag name, and descendant selectors
 */
 /* ----- */
-{
+#software svg{
     stroke: var(--dk-gray);
 }
 
@@ -737,7 +744,7 @@ input:focus{
     select the table in the table styles section using the element/tag name selector
 */
 /* ----- */
-{ 
+table{ 
     border-collapse: collapse;
     width: 100%;
 }
@@ -748,7 +755,7 @@ input:focus{
     select the caption in the table styles section using the element/tag name selector
 */
 /* ----- */
-{ 
+caption{ 
     font-weight: bold;
     font-size: 1.25rem;
     margin-bottom: 8px;
@@ -760,7 +767,7 @@ input:focus{
     select the table header cells in the table styles section using the element/tag name, descendant, and ID selectors
 */
 /* ----- */
-{ 
+#table th{ 
     background-color: var(--blue);
     color: var(--white);
 }
@@ -771,7 +778,7 @@ input:focus{
     select the odd table rows in the table body of the table styles section using the element/tag name and the pseudo-class selectors
 */
 /* ----- */
-{ 
+tbody tr:nth-of-type(odd){ 
     background-color: var(--dv-orange);
 }
 
@@ -781,7 +788,7 @@ input:focus{
     select the first column in the table body of the table styles section using the element/tag name and the pseudo-class selectors
 */
 /* ----- */
-{ 
+tbody td:first-child{ 
     font-weight: bold;
 }
 
@@ -791,7 +798,7 @@ input:focus{
     select the table heading cells (th) and the table data cells in the table styles section using the element/tag name and multiple element selectors
 */
 /* ----- */
-{ 
+th, td{ 
     border: 1px solid var(--dk-gray);
     padding: 4px;
 }
@@ -802,7 +809,7 @@ input:focus{
     select the table footer in the table styles section using the element/tag name selector
 */
 /* ----- */
-{ 
+tfoot{ 
     font-weight: bold;
 }
 
@@ -815,7 +822,7 @@ input:focus{
     select all of the divs in the border styling section using the ID, descendant, and tag name selectors
 */
 /* ----- */
-{
+#borders div{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -827,7 +834,7 @@ input:focus{
     select the first div in the border styling section using the ID, tag name and direct descendant selectors
   */
   /* ----- */
-{
+#borders >  div{
     width: 300px;
     height: 300px;
     margin: 16px auto;
@@ -840,7 +847,7 @@ input:focus{
     select the second div in the border styling section using the ID, descendant, and tag name selectors
 */
 /* ----- */
-{
+#borders div div{
     width: 250px;
     height: 250px;
     border: 6px dotted var(--dv-orange);
@@ -852,7 +859,7 @@ input:focus{
     select the third div in the border styling section using the ID, descendant, and class name selectors
 */
 /* ----- */
-{
+#borders .dashed{
     width: 200px;
     height: 200px;
     border: 6px dashed var(--dv-yellow);
@@ -864,7 +871,7 @@ input:focus{
     select the fourth div in the pseudo-class styling section using the ID, tag name, descendant, and class selectors
 */
 /* ----- */
-{
+#borders .dashed div{
     width: 150px;
     height: 150px;
     border: 6px double var(--dv-mint);
@@ -876,7 +883,7 @@ input:focus{
     select the last div in the more styling section using the ID, tag name, descendant, and class selectors
 */
 /* ----- */
-{
+#borders .dashed div div{
     width: 100px;
     height: 100px;
     border: 6px inset var(--dv-lt-blue);
@@ -891,7 +898,7 @@ input:focus{
     select the pseudo-elements section using the ID selector
 */
 /* ----- */
-{
+#pseudo els{
     position: relative;
 }
 
@@ -901,7 +908,7 @@ input:focus{
     select the div in the pseudo-elements section using the ID, child/descendant, and tag name selectors
 */
 /* ----- */
-{
+#pseudo-els div{
     width: 275px;
     height: 275px;
     margin: 56px auto 32px;
@@ -916,7 +923,7 @@ input:focus{
     select the div's before element in the pseudo-elements section using the ID, child/descendant, pseudo-element, and tag name selectors
 */
 /* ----- */
-{
+#pseudo-els div::before{
     content: "\2730";
     padding: 12px 24px;
     border-radius: 50%;
@@ -936,7 +943,7 @@ input:focus{
     select the image in the pseudo-elements section using the ID, child/descendant, and tag name selectors
 */
 /* ----- */
-{
+#pseudo-els img{
     width: 200px;
     height: 200px;
     margin: 0 auto;
@@ -954,7 +961,7 @@ input:focus{
     select the footer element by tag name
 */
 /* ----- */
-{
+footer{
     margin: 2rem auto 0 auto;
     text-align: center;
 }
